# Text-editor

./: .gitignore  CMakeLists.txt  MainWindow.cpp  build.sh  fileedit.cpp  textedit.cpp  utext  utext.pro
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  fileedit.cpp  textedit.cpp  textedit.h
